Make it work on Safari and some bug fixes.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h2,#configuration,blockquote,#overview,.notice {
 }
 
 .polynomial {
-  font-family: MJXZERO, MJXTEX-I;
+  font-family: serif;
 }
 
 .clarification {
